Implementation of the new build support.
Now the static and shared versions are built if possible.
The default installed version can be configured using the
new DEFAULT_LIBRARY_TYPE make variable. The setup is now
persistent using a generated makefile.setup makefile.
The shared version is built only if supported by the
plateform.
--
Work for H505-007.

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ lib/*.a
 lib/*.coff
 lib/*.dll
 lib/.gpssnprj
+makefile.setup
 regtests/*.log
 regtests/*.res
 regtests/all_mains.lst
@@ -81,8 +82,8 @@ regtests/regtests_lst.gpr
 regtests/s_mains.lst
 regtests/s_tsec.lst
 regtests/s_tsecxmlada.lst
-regtests/s_txmlada.lst
 regtests/s_tstd.lst
+regtests/s_txmlada.lst
 regtests/test_all
 regtests/test_all.adb
 regtests/test_soap.netlog
