--- a/makefile.conf
+++ b/makefile.conf
@@ -13,15 +13,21 @@
 INSTALL	 = $(dir $(shell which gnatls))..
 
 ##############################################################################
-# Set to true if AWS must be built as a shared library. If SHARED is set to
-# false AWS is built as a static library. It is possible to build and
-# install both versions of the AWS runtime (static and shared) by building
-# with SHARED set to true and then to set to false. The last built version
-# will be used as the default when building applications.
+# Set to true if the AWS shared runtime must be built. If ENABLE_SHARED is
+# set to false on the static version is built. The default value is true if
+# the platform supports shared libraries.
 #
-# SHARED = [true/false]
+# ENABLE_SHARED = [true/false]
 #
-SHARED	= true
+ENABLE_SHARED=$(shell $(GNAT) make -c -q -p \
+		-Pconfig/src/test_shared 2>/dev/null && echo "true")
+
+##############################################################################
+# Specify the default library type to setup for the installed AWS project.
+#
+# DEFAULT_LIBRARY_TYPE = [static|relocatable]
+#
+DEFAULT_LIBRARY_TYPE = static
 
 ##############################################################################
 # XMLADA optional, needed if you want to build SOAP's AWS support. Set XMLADA
@@ -133,9 +139,19 @@ $(error IPv6 variable must be set to true or false)
 endif
 endif
 
-ifneq ($(SHARED), true)
-ifneq ($(SHARED), false)
-$(error SHARED variable must be set to true or false)
+ifeq  ($(ENABLE_SHARED), )
+ENABLE_SHARED=false
+endif
+
+ifneq ($(ENABLE_SHARED), true)
+ifneq ($(ENABLE_SHARED), false)
+$(error ENABLE_SHARED variable must be set to true or false)
+endif
+endif
+
+ifneq ($(DEFAULT_LIBRARY_TYPE), static)
+ifneq ($(DEFAULT_LIBRARY_TYPE), relocatable)
+$(error DEFAULT_LIBRARY_TYPE variable must be set to static or relocatable)
 endif
 endif
 
