--- a/tools/makefile
+++ b/tools/makefile
@@ -1,7 +1,7 @@
 ############################################################################
 #                              Ada Web Server                              #
 #                                                                          #
-#                         Copyright (C) 2003-2007                          #
+#                         Copyright (C) 2003-2008                          #
 #                                 AdaCore                                  #
 #                                                                          #
 #  This library is free software; you can redistribute it and/or modify    #
@@ -50,23 +50,24 @@ ada2wsdl-options.adb: force
 	echo "end Ada2WSDL.Options;" >> ada2wsdl-options.adb
 
 setup: $(GEN)
-	$(MKDIR) -p ../$(BDIR)/obj/tools
-	$(MKDIR) -p ../$(BDIR)/tools
+	$(MKDIR) -p ../$(BDIR)/static/obj/tools
+	$(MKDIR) -p ../$(BDIR)/static/tools
 
 build:
-	$(GNAT) make -Ptools
+	$(GNAT) make -XLIBRARY_TYPE=static -Ptools
 
 install:
-	-$(CP) ../$(BDIR)/tools/awsres${EXEEXT} $(I_BIN)
-	-$(CP) ../$(BDIR)/tools/hotplug_password${EXEEXT} $(I_BIN)
-	-$(CP) ../$(BDIR)/tools/templates2ada${EXEEXT} $(I_BIN)
-	-$(CP) ../$(BDIR)/tools/templatespp${EXEEXT} $(I_BIN)
-	-$(CP) ../$(BDIR)/tools/webxref${EXEEXT} $(I_BIN)
+	-$(CP) ../$(BDIR)/static/tools/awsres${EXEEXT} $(I_BIN)
+	-$(CP) ../$(BDIR)/static/tools/hotplug_password${EXEEXT} $(I_BIN)
+	-$(CP) ../$(BDIR)/static/tools/templates2ada${EXEEXT} $(I_BIN)
+	-$(CP) ../$(BDIR)/static/tools/templatespp${EXEEXT} $(I_BIN)
+	-$(CP) ../$(BDIR)/static/tools/webxref${EXEEXT} $(I_BIN)
 ifeq ($(XMLADA),true)
-	$(CP) ../$(BDIR)/tools/wsdl2aws${EXEEXT} $(I_BIN)
+	$(CP) ../$(BDIR)/static/tools/wsdl2aws${EXEEXT} $(I_BIN)
 endif
 ifeq (${ASIS},true)
-	$(CP) ../$(BDIR)/tools/ada2wsdl-main${EXEEXT} $(I_BIN)/ada2wsdl${EXEEXT}
+	$(CP) ../$(BDIR)/static/tools/ada2wsdl-main${EXEEXT} \
+		$(I_BIN)/ada2wsdl${EXEEXT}
 endif
 
 check:
