Update comments to use common syntax.

--- a/makefile.conf
+++ b/makefile.conf
@@ -17,7 +17,7 @@ INSTALL	 = $(dir $(shell which gnatls))..
 # set to false on the static version is built. The default value is true if
 # the platform supports shared libraries.
 #
-# ENABLE_SHARED = [true/false]
+# ENABLE_SHARED = [true|false]
 #
 ENABLE_SHARED=$(shell $(GNAT) make -c -q -p \
 		-Pconfig/src/test_shared 2>/dev/null && echo "true")
@@ -47,7 +47,7 @@ XMLADA	= false
 #
 # If you activate ASIS you also need to activate XMLADA above.
 #
-# ASIS = [true/false]
+# ASIS = [true|false]
 #
 ASIS	= false
 
@@ -55,7 +55,7 @@ ASIS	= false
 # IPv6, optional. If you want to use IPv6 sockets just uncomment the IPv6
 # variable below.
 #
-# IPv6 = [true/false]
+# IPv6 = [true|false]
 #
 IPv6	= false
 
@@ -66,7 +66,7 @@ IPv6	= false
 # are distributed on Windows platforms therefore the SSL mode is the default
 # on this platform. (note that below ssl and openssl are aliases).
 #
-# SOCKET = [std/openssl/gnutls]
+# SOCKET = [std|openssl|gnutls]
 #
 SOCKET	= std
 
@@ -76,7 +76,7 @@ SOCKET	= std
 # if it is not already installed. If LDAP is installed on your system you can
 # set LDAP=true below.
 #
-# LDAP = [true/false]
+# LDAP = [true|false]
 #
 LDAP	= false
 
@@ -84,7 +84,7 @@ LDAP	= false
 # To activate the debug mode just uncomment the variable below. This will
 # build AWS with debug information and will output more build information.
 #
-# DEBUG = [true/false]
+# DEBUG = [true|false]
 #
 DEBUG	= false
 
