Rename INSTALL variable to prefix (GNU standard).
Continued work for H505-007.

--- a/makefile.conf
+++ b/makefile.conf
@@ -6,11 +6,11 @@
 #            $ make setup
 
 ##############################################################################
-# AWS will be installed under $(INSTALL). Update this variable to point to
+# AWS will be installed under $(prefix). Update this variable to point to
 # the install directory. You probably want to set this to the GNAT root
 # directory to have AWS project files automatically available.
 #
-INSTALL	 = $(dir $(shell which gnatls))..
+prefix	 = $(dir $(shell which gnatls))..
 
 ##############################################################################
 # Set to true if the AWS shared runtime must be built. If ENABLE_SHARED is
@@ -188,11 +188,19 @@ endif
 endif
 endif
 
-ifeq ("$(INSTALL)", "..")
-$(error "Wrong install path : INSTALL='$(INSTALL)', \
+ifneq ($(INSTALL), )
+$(error INSTALL variable is deprecated, please use prefix instead)
+endif
+
+ifneq ($(SHARED), )
+$(error SHARED variable is deprecated, please use ENABLE_SHARED instead)
+endif
+
+ifeq ("$(prefix)", "..")
+$(error "Wrong install path : prefix='$(prefix)', \
   Check that GNAT is in the PATH")
 else
-ifeq ("$(INSTALL)", "")
-$(error "Wrong install path : empty INSTALL variable")
+ifeq ("$(prefix)", "")
+$(error "Wrong install path : empty prefix variable")
 endif
 endif
