--- a/makefile.conf
+++ b/makefile.conf
@@ -11,6 +11,7 @@
 # directory to have AWS project files automatically available.
 #
 prefix	 = $(dir $(shell which gnatls))..
+prefix = $(HOME)/Ada/lib
 
 ##############################################################################
 # Set to true if the AWS shared runtime must be built. If ENABLE_SHARED is
@@ -21,6 +22,7 @@ prefix	 = $(dir $(shell which gnatls))..
 #
 ENABLE_SHARED=$(shell $(GNAT) make -c -q -p \
 		-Pconfig/src/test_shared 2>/dev/null && echo "true")
+ENABLE_SHARED	= false
 
 ##############################################################################
 # Specify the default library type to setup for the installed AWS project.
@@ -38,6 +40,7 @@ DEFAULT_LIBRARY_TYPE = static
 # XMLADA = [true/false]
 #
 XMLADA	= false
+#XMLADA	= true
 
 ##############################################################################
 # ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
@@ -58,6 +61,7 @@ ASIS	= false
 # IPv6 = [true|false]
 #
 IPv6	= false
+IPv6	= true
 
 ##############################################################################
 # AWS supports SSL (Secure Socket Layer). The SSL support is always built-in
@@ -69,6 +73,7 @@ IPv6	= false
 # SOCKET = [std|openssl|gnutls]
 #
 SOCKET	= std
+SOCKET	= openssl
 
 ##############################################################################
 # AWS provides a binding to the LDAP API. This binding will use the standard
@@ -87,6 +92,7 @@ LDAP	= false
 # DEBUG = [true|false]
 #
 DEBUG	= false
+DEBUG	= true
 
 ##############################################################################
 # To run regression tests with GDB, uncomment the line below.
