--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ regtests/all_mains.lst
 regtests/alldifs
 regtests/anytype.netlog
 regtests/cert.pem
+regtests/check_mem
+regtests/check_mem.run*
 regtests/dm_file.data
 regtests/file.tmplt
 regtests/file1.html
@@ -71,6 +73,7 @@ regtests/filez.tmplt
 regtests/generate
 regtests/generated
 regtests/generated/
+regtests/gmem.out
 regtests/hotplug_access.ini
 regtests/icons
 regtests/icons/
